--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@xoxno/types",
   "version": "1.0.1",
-  "description": "Shared types and utilities for our applications.",
+  "description": "Shared types and utilities for XOXNO.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
