--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "node generate-barrel.mjs && eslint 'src/index.ts' --fix && npm run build",
     "lint": "eslint 'src/**/*.ts'",
     "lint:fix": "eslint 'src/**/*.ts' --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
