--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
+    "glob": "^11.0.3",
     "prettier": "^3.6.2",
     "rollup": "^4.45.1",
     "rollup-plugin-dts": "^6.2.1",
