--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   "dependencies": {
     "@azure/cosmos": "^4.5.0",
     "@multiversx/sdk-nestjs-common": "^6.0.0",
+    "@nestjs/common": "^11.1.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "uuid": "^11.1.0"
