--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '20'
-      - run: npm ci
+      - run: npm ci --verbose
       - run: npm run build
       - uses: JS-DevTools/npm-publish@v3
         with:
